# servicemaster

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  bus.c  bus.h  config.c  config.h  display.c  display.h  meson.build  service.c  service.h  servicemaster.1  servicemaster.c  servicemaster.desktop  servicemaster.toml  sm_err.c
.github/: FUNDING.yml
